# Forgev1

./: .claude_session_state.md  .gitattributes  .gitignore  FORGE.md  Forge_Spec.txt  SECURITY.md  env.example  eslint.config.mjs  firestore.indexes.json  firestore.rules  next.config.ts  package-lock.json  package.json  playwright.config.ts  storage.rules  vercel.json  vitest.config.ts
docs/: 11_TASKS_CHANGES.md  AI_NATIVE_WORKSPACE_PLAN.md  BACKEND_REFINEMENT.md  CALENDAR_SETUP.md  COMPETITIVE_ANALYSIS.md  COUNTERFORGE.md  CURATED_DATASETS.md  DATA_SCHEMA.md  FORGE_SAI_TRAINING_PLAN.md  KAGGLE_GUIDE.md  NEXT_7_TASKS.md  PERF.md  PHASE3_CHECKPOINTS.md  RECALL.md  RETRIEVAL_ARCHITECTURE.md  TEMPO_ARCHITECTURE.md  TEMPO_DB_SCHEMA.md  VERITAS_TRAINING_PLAN_V2.md
e2e/: a11y.spec.ts  auth.spec.ts  calendar-nav.spec.ts  create-project.spec.ts  habits.spec.ts  lattice.spec.ts  pulse.spec.ts  sync.spec.ts  tempo.spec.ts  tsconfig.json
e2e/support/: a11y.ts  auth.ts
kaggle/: README.md
kaggle/notebooks/: veritas-stage1-augment.ipynb  veritas-stage1-eval.ipynb  veritas-stage1-temperature.ipynb  veritas-stage1-train.ipynb  veritas-stage3-simpo.ipynb
src/: instrumentation-client.ts  instrumentation.ts  proxy.ts
src/app/: globals.css  (+3 more)
veritas/: README.md
veritas/training/: .gitignore  README.md  pyproject.toml
veritas/training/config/: base.yaml
veritas/training/src/forge_veritas/: __init__.py  config.py
veritas/training/src/forge_veritas/calibration/: __init__.py  ensemble.py  mc_dropout.py  metrics.py  temperature.py
veritas/training/src/forge_veritas/data/: __init__.py  chat_template.py  curated.py  firestore_export.py  pii.py  vitaminc_kaggle.py
veritas/training/src/forge_veritas/eval/: __init__.py  smoke_eval.py
veritas/training/src/forge_veritas/rewards/: __init__.py
veritas/training/src/forge_veritas/serving/: __init__.py
veritas/training/src/forge_veritas/train/: __init__.py  preference.py  regularisation.py  sft.py
veritas/training/tests/: test_data_export.py
veritas/training/tests/fixtures/: episodes_fixture.json
(+484 files in other folders)
